fun(section6 ftill complete)

--- a/html/index.html
+++ b/html/index.html
@@ -174,7 +174,7 @@
                 
                 <div class="child">
                     <div class="item-1">
-                        <img src="../img/bulb.svg" alt="" class="item-1_img">
+                        <img src="../img/money.svg" alt="" class="item-1_img">
                     </div>
                     <div class="item-2">
                         <h4 class="item2_head">Asymmetrical Investing Expertise:</h5>
@@ -193,8 +193,8 @@
                         <img src="../img/increment.svg" alt="" class="item-1_img">
                     </div>
                     <div class="item-2">
-                        <h4 class="item2_head">Strategic Insights:</h5>
-                       <p class="item2_paragraph">  Discover tailored investment strategies meeting your unique goals. Our customized solutions optimize portfolios to achieve financial success.</p></div>
+                        <h4 class="item2_head">Proven Track Record:</h5>
+                       <p class="item2_paragraph"> With a history of successful investments and value creation, we deliver results that speak for themselves.</p></div>
                 </div>
 
 
@@ -207,8 +207,8 @@
                         <img src="../img/bulb.svg" alt="" class="item-1_img">
                     </div>
                     <div class="item-2">
-                        <h4 class="item2_head">Industry Leading Expertise:</h5>
-                       <p class="item2_paragraph">  Our Executive team is one of the most experienced in the shared mobility space, with deep and comprehensive experience. The executive team has spearheaded scaling businesses up to one billion in revenue, and strategic initiatives with investments up to10 billion dollars.</p></div>
+                        <h4 class="item2_head">Strategic Insights:</h5>
+                       <p class="item2_paragraph">   Discover tailored investment strategies meeting your unique goals. Our customized solutions optimize portfolios to achieve financial success.</p></div>
                 </div>
 
 
@@ -220,8 +220,8 @@
                         <img src="../img/ear.svg" alt="" class="item-1_img">
                     </div>
                     <div class="item-2">
-                        <h4 class="item2_head">Tailored Solutions:</h5>
-                       <p class="item2_paragraph"> We understand that every investor is unique. That's why we offer personalized solutions designed to meet your specific investment objectives.</p></div>
+                        <h4 class="item2_head">Industry Leading Expertise:</h5>
+                       <p class="item2_paragraph"> Our Executive team is one of the most experienced in the shared mobility space, with deep and comprehensive experience. The executive team has spearheaded scaling businesses up to one billion in revenue, and strategic initiatives with investments up to10 billion dollars.</p></div>
                 </div>
 
 
@@ -233,8 +233,8 @@
                         <img src="../img/ear.svg" alt="" class="item-1_img">
                     </div>
                     <div class="item-2">
-                        <h4 class="item2_head">Proven Track Record:</h5>
-                       <p class="item2_paragraph">  With a history of successful investments and value creation, we deliver results that speak for themselves.</p></div>
+                        <h4 class="item2_head">Tailored Solutions:</h5>
+                       <p class="item2_paragraph">We understand that every investor is unique. That's why we offer personalized solutions designed to meet your specific investment objectives.</p></div>
                 </div>
 
 
@@ -248,19 +248,14 @@
 
  <!-- Section 7 -->
 <Section class="section7">
-<div class="container">
-    <div class="section7_parents">
-        <div class="section7_sections1"><h3 class="section7_1heading">Our commitment goes beyond finance. We focus on mutual growth,success, and sustainability.</h3></div>
-        <div class="section7_sections2"> As the Founder and CEO of Kairos Capital Resources, I envision a company that transcends mere profit-seeking. We are architects of opportunity, committed to unlocking hidden value, fostering growth, and reshaping industries through innovation, integrity, and excellence.</div>
-        <div class="section7_sections3">
-            Don Schreffler
-            Founder
-
-            Ganesh Rewanwar
-            CEO</div>
+    <div class="container">
+        <div class="main_7">
+            <div class="section7_part1"></div>
+            <div class="section7_part2"></div>
+            <div class="section7_part3"></div>
+        </div>
     </div>
-</div>
-
 </Section>
+
 </body>
 </html>
