fun(about) till about section all done

--- a/html/index.html
+++ b/html/index.html
@@ -250,12 +250,97 @@
 <Section class="section7">
     <div class="container">
         <div class="main_7">
-            <div class="section7_part1"></div>
-            <div class="section7_part2"></div>
-            <div class="section7_part3"></div>
+            <div class="section7_heading_parent">
+                <div class="section7_part1">Our commitment goes beyond finance. We focus on mutual growth,success, and sustainability.</div>
+            </div>
+            <div class="section7_part2">As the Founder and CEO of Kairos Capital Resources, I envision a company that transcends mere profit-seeking. We are architects of opportunity, committed to unlocking hidden value, fostering growth, and reshaping industries through innovation, integrity, and excellence.</div>
+            <div class="section7_part3">
+                <span class="part1">
+                    <p class="name_emp">Don Schreffler</p>
+                    <h4 class="position_name1"><i>Founder</i></h4></span>
+                    
+                    <span class="part2">
+                        <p class="name_emp">Ganesh Rewanwar</p>
+<h4 class="position_name2"><i>CEO</i></h4>
+                    </span>
+            </div>
         </div>
     </div>
 </Section>
+
+
+
+
+<!-- Section8 -->
+
+<section class="section8">
+    <div class="container">
+
+       <div class="section8_main">
+
+        <div class="        ">
+            <h1 class="section8_heading">About Our Team</h1>
+            <p class="section8_para">At Kairos Capital Resources, our team comprises seasoned professionals with diverse expertise in finance, entrepreneurship, strategic management, operations, and logistics. Together, we drive success through collaboration and innovation.</p>
+        </div>
+
+
+        <div class="section8_part2">
+            <div class="section8_part2_img_parent">
+
+
+                <div class="img">
+                    <img src="../img/Photo-05.png" class="img_section8" srcset="">
+                    <div class="img_des">
+                        <p class="name">Don Schreffler</p>
+                        <p class="position">Executive Partner, Founder</p>
+                    </div>
+                </div>
+
+
+                <div class="img">
+                    <img src="../img/Rectangle-32-7.png" class="img_section8" srcset="">
+                    <div class="img_des">
+                        <p class="name">Don Schreffler</p>
+                        <p class="position">Executive Partner, Founder</p>
+                    </div>
+                </div>
+
+
+             
+
+
+
+                <div class="img">
+                    <img src="../img/Rectangle-36-3-300x259.png" class="img_section8" srcset="">
+                    <div class="img_des">
+                        <p class="name">Don Schreffler</p>
+                        <p class="position">Executive Partner, Founder</p>
+                    </div>
+                </div>
+
+
+
+
+                <div class="img">
+                    <img src="../img/Rectangle-35-2-300x259.png" class="img_section8" srcset="">
+                    <div class="img_des">
+                        <p class="name">Don Schreffler</p>
+                        <p class="position">Executive Partner, Founder</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+       </div>
+    </div>
+</section>
+
+
+
+
+
+<!-- =========================================
+Section9 -->
 
 </body>
 </html>
