--- a/html/index.html
+++ b/html/index.html
@@ -111,7 +111,7 @@
 
 
     <!-- Section 4 Truths -->
-<section class="trust_section">
+<section class="truth_section">
     <div class="container">
 
         <div class="truth">
