fun(responsive) all done testing is pending

--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
       <a class="navbar-brand" href="#">
-        <img src="../img/img1.svg" alt="" />
-      </a>
+        <img src="../img/img1.svg" alt=""  class="img_nav"/></a>
       
       <button
         class="navbar-toggler"
@@ -286,9 +285,14 @@
     <div class="container">
         <div class="main_7">
             <div class="section7_heading_parent">
-                <div class="section7_part1">Our commitment goes beyond finance. We focus on mutual growth,success, and sustainability.</div>
+                <div class="section7_part1">
+                    <h2 class="heading_ani">
+                    Our commitment goes beyond finance. We focus on mutual growth, success, and sustainability.
+                </h3></div>
             </div>
-            <div class="section7_part2">As the Founder and CEO of Kairos Capital Resources, I envision a company that transcends mere profit-seeking. We are architects of opportunity, committed to unlocking hidden value, fostering growth, and reshaping industries through innovation, integrity, and excellence.</div>
+            <div class="section7_part2"><p class="section_ani_p">
+                As the Founder and CEO of Kairos Capital Resources, I envision a company that transcends mere profit-seeking. We are architects of opportunity, committed to unlocking hidden value, fostering growth, and reshaping industries through innovation, integrity, and excellence.
+            </p></div>
             <div class="section7_part3">
                 <span class="part1">
                     <p class="name_emp">Don Schreffler</p>
@@ -379,7 +383,7 @@ Section9 -->
 <section class="section9">
     <div class="container">
         <div class="section9_parent">
-            <div class="heading_section9">
+            <div class="heading_section_nine">
                 <h1 class="section9_heading">Get in touch with us today to optimize your financial results</h1>
             </div>
 
@@ -407,7 +411,7 @@ Section10-----Footer -->
 
         <div class="parent_section10">
 
-            <div class="part_section10_1">
+            <div class="part_section_ten_one">
 
 
                 <span class="section10_div1_part1">
@@ -438,7 +442,7 @@ Section10-----Footer -->
                     </ol>
                 </span>
                 <span class="section10_div2_part2">
-                    <img class="" src="../img/img1.svg" alt="">
+                    <img class="section_img" src="../img/img1.svg" alt="">
                 </span>
                 <span class="section10_div2_part2">
                     <ol class="ol_2">
